--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,12 @@
     <title> Peyton McGrath - Game Developer </title>
   </head>
   <body>
+
+    <ul>
+      <li> <a href="About.html">About Me</a> </li>
+    </ul>
+
+    
     <h1> Peyton McGrath </h1>
     <p> Game Developer </p>
 
