--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
     <p> Team Project, Uniity/C# </p>
 
     <h1> Shield Minigame </h1>
+    <img src="MinigameCoverImage.png">
     <p> Solo Project, Uniity/C# </p>
   
   
